Subiendo estilos a los títulos

--- a/hero.css
+++ b/hero.css
@@ -19,6 +19,7 @@
     block-size: auto;
     border-radius: 8px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    margin-top: 35px;
 }
 
 .hero h1{
