--- a/button.css
+++ b/button.css
@@ -20,3 +20,22 @@
     color: var(--purple) ;
     border: 2px solid var(--purple);
 }
+
+.btn-project:hover{
+    color: #310A90;
+    font-size: 18px;
+    transition: all .1s ease;
+}
+
+.btn-contact:hover{
+    color: #310A90;
+    font-size: 18px;
+    transition: all .1s ease;
+}
+
+.is-active:hover{
+    color: white;
+    font-size: 18px;
+    transition: all .1s ease; 
+}
+
