--- a/hero.css
+++ b/hero.css
@@ -20,6 +20,7 @@
     border-radius: 8px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     margin-top: 35px;
+    width: 53%;
 }
 
 .hero h1{
